[package]
name = "teka"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }    # Async runtime
serde = { version = "1.0", features = ["derive"] } # Serialization
serde_json = "1.0"                                # JSON handling
libp2p = "0.52"                                   # P2P Networking
rocksdb = "0.19"                                  # Database storage
clap = "4.0"                                      # CLI parsing
axum = "0.6"                                      # RPC API
rand = "0.8"                                      # Random generator